update vehicle-service